# agent

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
.kiro/docs/: scenario-testing-setup.md
.kiro/settings/: mcp.json
.kiro/specs/fastapi-deployment/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/greeting-agent/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: CI-CD.md  SETUP.md  TROUBLESHOOTING.md
src/tbbot/: __init__.py  api.py  config.py  greeting.py  models.py
tests/: README_SCENARIOS.md  __init__.py  conftest.py  test_api_scenarios.py  test_chat_endpoint.py  test_conversation_scenarios.py  test_error_handling.py  test_greeting_agent.py  test_greeting_detection.py  test_greeting_scenarios.py  test_health_endpoint.py
