[project]
name = "tbbot"
version = "0.1.0"
description = "Educational AI agent for teaching AI agent development"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.2",
    "langwatch-scenario>=0.7.16",
    "litellm>=1.81.13",
    "pandas>=3.0.1",
    "pytest-coverage>=0.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tbbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

